k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: heart-disease
  labels:
    app.kubernetes.io/name: heart-disease
