k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-api
  namespace: heart-disease
  labels:
    app: heart-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  selector:
    app: heart-api
  ports:
    - name: http
      port: 80
      targetPort: http
