k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heart-api
  namespace: heart-disease
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: heart-api.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heart-api
                port:
                  number: 80
